[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hwcomponents_cacti"
version = "0.1"
description = "A package for estimating the energy and area of memories with CACTI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Tanner Andrulis", email = "andrulis@mit.edu"}
]
keywords = ["accelerator", "hardware", "energy", "estimation", "CACTI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true
py-modules = ["hwcomponents_cacti"]

[tool.setuptools.package-data]
hwcomponents_cacti = [
    "default_cfg.cfg",
    "cacti/cacti",
    "cacti/tech_params/16nm.dat",
    "cacti/tech_params/180nm-old.dat",
    "cacti/tech_params/180nm.dat",
    "cacti/tech_params/22nm.dat",
    "cacti/tech_params/32nm.dat",
    "cacti/tech_params/45nm.dat",
    "cacti/tech_params/65nm-old.dat",
    "cacti/tech_params/65nm.dat",
    "cacti/tech_params/90nm-old.dat",
    "cacti/tech_params/90nm.dat",
]
