[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hwcomponents_cacti"
dynamic = ["version"]
description = "A package for estimating the energy and area of memories with CACTI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Tanner Andrulis", email = "andrulis@mit.edu"}
]
keywords = ["accelerator", "hardware", "energy", "estimation", "CACTI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "hwcomponents",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
hwcomponents_cacti = [
    "default_cfg.cfg",
    "cacti/cacti",
    "cacti/tech_params/16nm.dat",
    "cacti/tech_params/180nm-old.dat",
    "cacti/tech_params/180nm.dat",
    "cacti/tech_params/22nm.dat",
    "cacti/tech_params/32nm.dat",
    "cacti/tech_params/45nm.dat",
    "cacti/tech_params/65nm-old.dat",
    "cacti/tech_params/65nm.dat",
    "cacti/tech_params/90nm-old.dat",
    "cacti/tech_params/90nm.dat",
]

[tool.setuptools_scm]
write_to = "hwcomponents_cacti/_version.py"
fallback_version = "1.0.0"
version_scheme = "setup_scm_version:post_version"
local_scheme = "setup_scm_version:no_local"
